--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -29,6 +29,9 @@ jobs:
       - name: Install dependencies
         run: npm install --legacy-peer-deps
 
+      - name: Make gradlew executable
+        run: chmod +x android/gradlew
+
       - name: Build Android Release APK
         run: |
           cd android
