--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -34,24 +34,28 @@ jobs:
           rm -rf node_modules package-lock.json
           npm install --legacy-peer-deps
 
+      - name: Debug React Native config
+        run: |
+          node ./node_modules/@react-native-community/cli/build/bin.js config 2>&1 || true
+
       - name: Clean gradle cache
         run: |
           cd android
           ./gradlew --stop
-          rm -rf .gradle build
+          rm -rf .gradle build app/build
 
-      - name: Build Android Release APK
+      - name: Build Android Debug APK
         run: |
           cd android
-          ./gradlew clean assembleRelease --stacktrace -x lint
+          ./gradlew assembleDebug --stacktrace
         env:
           JAVA_OPTS: '-Xmx4096m'
 
       - name: Upload APK artifact
         uses: actions/upload-artifact@v4
         with:
-          name: app-release
-          path: android/app/build/outputs/apk/release/app-release.apk
+          name: app-debug
+          path: android/app/build/outputs/apk/debug/app-debug.apk
 
       - name: Create Release
         if: startsWith(github.ref, 'refs/tags/')
