--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -34,13 +34,18 @@ jobs:
 
       - name: Patch native_modules.gradle
         run: |
-          sed -i 's/def getReactNativeConfig.*/def getReactNativeConfig() { return [:] }/g' node_modules/@react-native-community/cli-platform-android/native_modules.gradle || true
+          GRADLE_FILE="node_modules/@react-native-community/cli-platform-android/native_modules.gradle"
+          # Comment out the problematic line that calls the React Native CLI
+          sed -i '250s/def config = getReactNativeConfig()/def config = [:]  \/\/ patched/' "$GRADLE_FILE"
+          cat "$GRADLE_FILE" | head -255 | tail -10
 
       - name: Clean gradle cache
         run: |
           cd android
           ./gradlew --stop || true
           rm -rf .gradle build app/build
+          cd ..
+          rm -rf node_modules/.gradle
 
       - name: Build Android Debug APK
         run: |
