--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -32,42 +32,38 @@ jobs:
       - name: Make gradlew executable
         run: chmod +x android/gradlew
 
-      - name: Patch native_modules.gradle
+      - name: Patch gradle file before build
         run: |
-          python3 << 'PYTHON_EOF'
+          python3 << 'EOF'
+          import os
           import re
           
+          # Find and patch the gradle file in node_modules
           gradle_file = "node_modules/@react-native-community/cli-platform-android/native_modules.gradle"
-          with open(gradle_file, "r") as f:
-              content = f.read()
           
-          # Comment out the line that calls the Node CLI
-          content = re.sub(
-              r'(\s+)def config = getReactNativeConfig\(\)',
-              r'\1def config = [:]  // Patched to avoid CLI call',
-              content
-          )
-          
-          with open(gradle_file, "w") as f:
-              f.write(content)
-          
-          print("Patched successfully")
-          PYTHON_EOF
+          if os.path.exists(gradle_file):
+              with open(gradle_file, 'r') as f:
+                  content = f.read()
+              
+              # Replace getReactNativeConfig() call with empty map
+              # This avoids the Node CLI JSON parsing error
+              content = content.replace(
+                  'def config = getReactNativeConfig()',
+                  'def config = [:]'
+              )
+              
+              with open(gradle_file, 'w') as f:
+                  f.write(content)
+              print("✓ Gradle file patched")
+          else:
+              print("✗ Gradle file not found")
+          EOF
 
-      - name: Verify patch
-        run: |
-          grep -n "def config" node_modules/@react-native-community/cli-platform-android/native_modules.gradle | head -5
-
-      - name: Deep clean
-        run: |
-          rm -rf android/.gradle android/build android/app/build
-          pkill -f "gradle" || true
-          sleep 2
-
-      - name: Build Android Debug APK
+      - name: Clean and build
         run: |
           cd android
-          ./gradlew clean assembleDebug
+          rm -rf .gradle build app/build
+          ./gradlew clean assembleDebug --no-daemon
         env:
           JAVA_OPTS: '-Xmx4096m'
 
