--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -36,42 +36,25 @@ jobs:
         run: |
           python3 << 'EOF'
           import os
+          import re
           
           gradle_file = "node_modules/@react-native-community/cli-platform-android/native_modules.gradle"
           
           if os.path.exists(gradle_file):
               with open(gradle_file, 'r') as f:
-                  lines = f.readlines()
+                  content = f.read()
               
-              # Find and comment out the entire getReactNativeConfig method
-              new_lines = []
-              in_method = False
-              brace_count = 0
-              
-              for i, line in enumerate(lines):
-                  # Comment out lines inside and related to getReactNativeConfig
-                  if 'getReactNativeConfig' in line or (in_method and i < 260):
-                      new_lines.append('// ' + line)
-                      if '{' in line:
-                          in_method = True
-                          brace_count += line.count('{')
-                      if in_method:
-                          brace_count += line.count('{') - line.count('}')
-                          if brace_count == 0:
-                              in_method = False
-                  else:
-                      new_lines.append(line)
-              
-              # Replace the ReactNativeModules class instantiation to avoid calling the method
-              content = ''.join(new_lines)
-              content = content.replace(
-                  'def config = getReactNativeConfig()',
-                  'def config = [:] // PATCHED'
+              # Only replace the specific line that calls getReactNativeConfig()
+              # This is the minimal change needed
+              content = re.sub(
+                  r'(\s+)def config = getReactNativeConfig\(\)',
+                  r'\1def config = [:]',
+                  content
               )
               
               with open(gradle_file, 'w') as f:
                   f.write(content)
-              print("✓ Gradle file patched extensively")
+              print("✓ Gradle file patched")
           else:
               print("✗ Gradle file not found")
           EOF
