--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -36,24 +36,28 @@ jobs:
         run: |
           python3 << 'EOF'
           import os
-          import re
           
           gradle_file = "node_modules/@react-native-community/cli-platform-android/native_modules.gradle"
           
           if os.path.exists(gradle_file):
               with open(gradle_file, 'r') as f:
-                  content = f.read()
+                  lines = f.readlines()
               
-              # Replace the entire getReactNativeConfig method to return safe defaults
-              pattern = r'ArrayList<HashMap<String, String>> getReactNativeConfig\(\) \{[^}]*(?:\{[^}]*\}[^}]*)*\}'
-              
-              replacement = 'ArrayList<HashMap<String, String>> getReactNativeConfig() {\n    return new ArrayList()\n  }'
-              
-              content = re.sub(pattern, replacement, content, flags=re.DOTALL)
+              # Find and patch the try-catch block that calls the Node CLI
+              new_lines = []
+              for i, line in enumerate(lines):
+                  # Comment out the shell execution line
+                  if 'def process = "' in line and 'which node' in line:
+                      new_lines.append(line.replace('def process = ', 'def process = null // '))
+                  # Skip or patch the output parsing
+                  elif 'def output = process.text' in line:
+                      new_lines.append('    def output = "{}"\n')
+                  else:
+                      new_lines.append(line)
               
               with open(gradle_file, 'w') as f:
-                  f.write(content)
-              print("Gradle method replaced")
+                  f.writelines(new_lines)
+              print("Gradle file patched")
           else:
               print("Gradle file not found")
           EOF
